--- a/fps/index.html
+++ b/fps/index.html
@@ -702,7 +702,7 @@ margin-right: 15px;
 </div>
 
 <script>
-    // $('#main').addClass('col-md-12')
+    $('#main').parent().removeClass('row')
 </script>
 
 </body></html>
