--- a/fps/location.html
+++ b/fps/location.html
@@ -1022,6 +1022,8 @@ id="modal_main_save_btn_submit">Akkoord</button>
 <script src="init-sentry.js"></script>
 <script src="main.js"></script>
 <script src="bootstrap-toggle.min.js"></script>
+
+<link href="https://fonts.googleapis.com/css?family=Poppins:400,700,900" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="./styles.css"> 
 
 </div>
