--- a/fps/location.html
+++ b/fps/location.html
@@ -51,7 +51,8 @@ height: auto;
 </style>
 </head>
 <body class="" style="overflow-x:hidden;">
-<div class="container-fluid">
+
+<!-- NOTE <div class="container-fluid"> --><div class="container">
 <div class="row content " style="display: flex;align-items: stretch;">
 <div id="leftsidemenudiv" class="" style="margin-left:15px;background-color:white;min-width: 250px;max-width:250px;transition: all 0.3s;border-right: solid 1px #f7f7f7;">
 <!-- Sidebar -->
@@ -1023,13 +1024,13 @@ id="modal_main_save_btn_submit">Akkoord</button>
 <script src="main.js"></script>
 <script src="bootstrap-toggle.min.js"></script>
 
+<!-- NOTE -->
 <link href="https://fonts.googleapis.com/css?family=Poppins:400,700,900" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="./styles.css"> 
-
 </div>
-
 <script>
     $('#main').parent().removeClass('row')
 </script>
+<!--  -->
 
 </body></html>
