--- a/fps/index.html
+++ b/fps/index.html
@@ -20,7 +20,7 @@
 <!--[if lt IE 9]>
 <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
-<script async="" src="analytics.js.download"></script><script>
+<script async="" src="analytics.js"></script><script>
 (function (i, s, o, g, r, a, m) {
 i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
 (i[r].q = i[r].q || []).push(arguments)
@@ -50,10 +50,8 @@ height: auto;
 }
 }
 </style>
-
-
 </head>
-<body class="" style="overflow-x:hidden;" cz-shortcut-listen="true">
+<body class="" style="overflow-x:hidden;">
 <div class="container">
 <div class="row content " style="display: flex;align-items: stretch;">
 <div id="leftsidemenudiv" class="" style="margin-left:15px;background-color:white;min-width: 250px;max-width:250px;transition: all 0.3s;border-right: solid 1px #f7f7f7;">
@@ -77,7 +75,7 @@ height: auto;
 </li>
 <li class="menuliparent">
 <a href="https://staging-redesign-app.k8s.fpsupport.nl/notificaties.html"><i class="fa fa-bell fa-lg" aria-hidden="true"></i> <span class="hidetitle">Notificaties </span>
-<span class="badge hidetitle" style="background-color:red;margin-left:70px;">6</span>
+<span class="badge hidetitle" style="background-color:red;margin-left:70px;">4</span>
 </a>
 </li>
 <li class="menuliparent">
@@ -172,7 +170,7 @@ padding-right:40px;
 }
 </style>
 </div>
-<div class="container-right" style="padding-left: 1px;width: 100%;;min-height: 100vh;transition: all 0.3s;">
+<div class="" style="padding-left: 1px;width: 100%;;min-height: 100vh;transition: all 0.3s;">
 <nav class="navbar" style="padding-top:10px;padding-right:10px;background-color:white;margin-bottom:0px;">
 <div class="container-fluid" style="margin-left:-30px;">
 <form class="navbar-form navbar-left" action="https://staging-redesign-app.k8s.fpsupport.nl/search-dashboard.html" style="margin-top:-5px;width:100%;">
@@ -190,7 +188,6 @@ Documenten
 </select>
 </div>
 <div class="input-group input-group-lg" style="width:65%;">
-<div class="input-group input-group-lg">
 <input type="text" class="form-control" name="search" value="" placeholder="Waar ben je naar op zoek?" style="border-right:none;padding:20px 10px;">
 <div class="input-group-btn">
 <button class="btn btn-default" type="submit">
@@ -215,7 +212,7 @@ Documenten
 </ul>
 </div>
 <a href="https://staging-redesign-app.k8s.fpsupport.nl/notificaties.html" class="nav navbar-nav" style="margin-left: 5px;margin-right: 15px;">
-<span class="fa-stack fa-2x" data-count="6">
+<span class="fa-stack fa-2x" data-count="4">
 <i class="fa fa-bell fa-stack-1x" style="color:black;"></i>
 </span>
 </a>
@@ -699,11 +696,7 @@ margin-right: 15px;
 <script src="bootstrap-toggle.min.js"></script>
 <link href="https://fonts.googleapis.com/css?family=Poppins:400,700,900" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="./styles.css"> 
-
-</div>
-
 <script>
     $('#main').parent().removeClass('row')
 </script>
-
-</body></html>
+</div></body></html>
