--- a/fps/index.html
+++ b/fps/index.html
@@ -68,7 +68,7 @@ height: auto;
 <a data-toggle="collapse" href="https://staging-redesign-app.k8s.fpsupport.nl/dashboard-module.html#collapse2" class="caretevent" aria-expanded="true"><i class="fa fa-dashboard fa-lg" aria-hidden="true"></i> <span class="hidetitle">Dashboard </span><span class="caret addcaret caret-up"></span></a>
 <ul class="list-group panel-collapse collapse in" id="collapse2" aria-expanded="true" style="">
 <li class="list-group-item activemenu collapse in" aria-expanded="true" style=""><a href="https://staging-redesign-app.k8s.fpsupport.nl/dashboard-module.html">Module</a></li>
-<li class="list-group-item"><a href="https://staging-redesign-app.k8s.fpsupport.nl/dashboard-profiel.html">Profiel</a></li>
+<li class="list-group-item"><a href="submodule.html">Profiel</a></li>
 <li class="list-group-item"><a href="location.html">Locatie</a></li>
 <li class="list-group-item"><a href="https://staging-redesign-app.k8s.fpsupport.nl/rapportages-zoeken.html">Rapportages</a></li>
 </ul>
