--- a/fps/location.html
+++ b/fps/location.html
@@ -1029,7 +1029,8 @@ id="modal_main_save_btn_submit">Akkoord</button>
 <link rel="stylesheet" type="text/css" href="./styles.css"> 
 </div>
 <script>
-    $('#main').parent().removeClass('row')
+    $('#main').parent().removeClass('row');
+    $('.breadcrumbsWrapper').parent().addClass('container-fluid ');
 </script>
 <!--  -->
 
