--- a/fps/index.html
+++ b/fps/index.html
@@ -58,7 +58,15 @@ height: auto;
 <!-- Sidebar -->
 <div id="sidebar-wrapper" style="margin-top:10px;padding-left:10px;">
 <a href="https://staging-redesign-app.k8s.fpsupport.nl/dashboard-module.html" style="outline: none; text-decoration: none; ">
-<img id="logofps" class="img-responsive" src="FPS-Logo.png" style="height:58px;">
+
+<div id="logofps">
+    <img  class="img-responsive" src="https://staging-redesign-app.k8s.fpsupport.nl/assets/images/FPS-Logo-short.png" style="height:58px;">
+    <div class="company">
+        <h1 class="name">FPS</h1>
+        <span class="slogan">Faccility Process Support</span>
+    </div>
+</div>
+
 </a>
 <div style="margin-top:40px;" class="menutext"><a href="https://staging-redesign-app.k8s.fpsupport.nl/dashboard-module.html#">Menu</a></div>
 <ul class="sidebar-nav list-unstyled" style="margin-top:30px;padding-left:20px;">
