--- a/fps/submodule.html
+++ b/fps/submodule.html
@@ -58,7 +58,14 @@ height: auto;
 <!-- Sidebar -->
 <div id="sidebar-wrapper" style="margin-top:10px;padding-left:10px;">
 <a href="https://staging-redesign-app.k8s.fpsupport.nl/dashboard-module.html" style="outline: none; text-decoration: none; ">
-<img id="logofps" class="img-responsive" src="./Jobs in submodule_files/FPS-Logo.png" style="height:58px;">
+    <div id="logofps">
+        <img  class="img-responsive" src="https://staging-redesign-app.k8s.fpsupport.nl/assets/images/FPS-Logo-short.png" style="height:58px;">
+        <div class="company">
+            <h1 class="name">FPS</h1>
+            <span class="slogan">Faccility Process Support</span>
+        </div>
+    </div>
+    
 </a>
 <div style="margin-top:40px;" class="menutext"><a href="https://staging-redesign-app.k8s.fpsupport.nl/jobs-in-submodule.html?subid=6CC73A93-0C1F-4E19-A1B0B213AE3D2E53&amp;locid=1023FF5F-F289-40A6-A26B65696EE87B15#">Menu</a></div>
 <ul class="sidebar-nav list-unstyled" style="margin-top:30px;padding-left:20px;">
