update home page

--- a/fps/index.html
+++ b/fps/index.html
@@ -57,7 +57,7 @@ height: auto;
 <div id="leftsidemenudiv" class="" style="margin-left:15px;background-color:white;min-width: 250px;max-width:250px;transition: all 0.3s;border-right: solid 1px #f7f7f7;">
 <!-- Sidebar -->
 <div id="sidebar-wrapper" style="margin-top:10px;padding-left:10px;">
-<a href="https://staging-redesign-app.k8s.fpsupport.nl/dashboard-module.html" style="outline: none; text-decoration: none; ">
+<a href="./index.html" style="outline: none; text-decoration: none; ">
 
 <div id="logofps">
     <img  class="img-responsive" src="https://staging-redesign-app.k8s.fpsupport.nl/assets/images/FPS-Logo-short.png" style="height:58px;">
