--- a/fps/submodule.html
+++ b/fps/submodule.html
@@ -52,12 +52,12 @@ height: auto;
 </style>
 </head>
 <body class="" style="overflow-x:hidden;">
-<div class="container-fluid">
+<div class="container">
 <div class="row content " style="display: flex;align-items: stretch;">
 <div id="leftsidemenudiv" class="" style="margin-left:15px;background-color:white;min-width: 250px;max-width:250px;transition: all 0.3s;border-right: solid 1px #f7f7f7;">
 <!-- Sidebar -->
 <div id="sidebar-wrapper" style="margin-top:10px;padding-left:10px;">
-<a href="https://staging-redesign-app.k8s.fpsupport.nl/dashboard-module.html" style="outline: none; text-decoration: none; ">
+<a href="./index.html" style="outline: none; text-decoration: none; ">
     <div id="logofps">
         <img  class="img-responsive" src="https://staging-redesign-app.k8s.fpsupport.nl/assets/images/FPS-Logo-short.png" style="height:58px;">
         <div class="company">
@@ -438,7 +438,8 @@ eenmalige job
 <link href="https://fonts.googleapis.com/css?family=Poppins:400,700,900" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="./styles.css"> 
 <script>
-    $('#main').parent().removeClass('row')
+    $('#main').parent().removeClass('row');
+    $('.breadcrumbsWrapper').parent().addClass('container-fluid ');
 </script>
 
 
