add scroll container layout

--- a/fps/index.html
+++ b/fps/index.html
@@ -705,6 +705,9 @@ margin-right: 15px;
 <link href="https://fonts.googleapis.com/css?family=Poppins:400,700,900" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="./styles.css"> 
 <script>
-    $('#main').parent().removeClass('row')
+    $('#main').parent().removeClass('row');
+    $('.navbar').parent().addClass('no-padding-left');
+    $('.footer hr').remove();
+    $('.logo-footer').parent().removeClass('container');
 </script>
 </div></body></html>
