--- a/fps/location.html
+++ b/fps/location.html
@@ -1038,6 +1038,9 @@ id="modal_main_save_btn_submit">Akkoord</button>
 <script>
     $('#main').parent().removeClass('row');
     $('.breadcrumbsWrapper').parent().addClass('container-fluid ');
+    $('.navbar').parent().addClass('no-padding-left');
+    $('.footer hr').remove();
+    $('.logo-footer').parent().removeClass('container');
 </script>
 <!--  -->
 
