--- a/fps/submodule.html
+++ b/fps/submodule.html
@@ -440,6 +440,9 @@ eenmalige job
 <script>
     $('#main').parent().removeClass('row');
     $('.breadcrumbsWrapper').parent().addClass('container-fluid ');
+    $('.navbar').parent().addClass('no-padding-left');
+    $('.footer hr').remove();
+    $('.logo-footer').parent().removeClass('container');
 </script>
 
 
