--- a/fps/location.html
+++ b/fps/location.html
@@ -1033,15 +1033,10 @@ id="modal_main_save_btn_submit">Akkoord</button>
 
 <!-- NOTE -->
 <link href="https://fonts.googleapis.com/css?family=Poppins:400,700,900" rel="stylesheet">
-<link rel="stylesheet" type="text/css" href="./styles.css"> 
+<link rel="stylesheet" type="text/css" href="index.css"> 
+<script src="index.js"></script>
+
 </div>
-<script>
-    $('#main').parent().removeClass('row');
-    $('.breadcrumbsWrapper').parent().addClass('container-fluid ');
-    $('.navbar').parent().addClass('no-padding-left');
-    $('.footer hr').remove();
-    $('.logo-footer').parent().removeClass('container');
-</script>
 <!--  -->
 
 </body></html>
