--- a/fps/submodule.html
+++ b/fps/submodule.html
@@ -435,15 +435,12 @@ eenmalige job
 <script src="init-sentry.js"></script>
 <script src="main.js"></script>
 <script src="bootstrap-toggle.min.js"></script>
+
+
 <link href="https://fonts.googleapis.com/css?family=Poppins:400,700,900" rel="stylesheet">
-<link rel="stylesheet" type="text/css" href="./styles.css"> 
-<script>
-    $('#main').parent().removeClass('row');
-    $('.breadcrumbsWrapper').parent().addClass('container-fluid ');
-    $('.navbar').parent().addClass('no-padding-left');
-    $('.footer hr').remove();
-    $('.logo-footer').parent().removeClass('container');
-</script>
+<link rel="stylesheet" type="text/css" href="index.css"> 
+<script src="index.js"></script>
+
 
 
 </div><style>body.tablesorter-disableSelection { -ms-user-select: none; -moz-user-select: -moz-none;-khtml-user-select: none; -webkit-user-select: none; user-select: none; }.tablesorter-resizable-container { position: relative; height: 1px; }.tablesorter-resizable-handle { position: absolute; display: inline-block; width: 8px;top: 1px; cursor: ew-resize; z-index: 3; user-select: none; -moz-user-select: none; }</style></body></html>
