--- a/fps/_Dashboard Module.html
+++ b/fps/_Dashboard Module.html
@@ -21,7 +21,7 @@
 <!--[if lt IE 9]>
 <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
-<script async="" src="analytics.js"></script><script>
+<script async="" src="./Dashboard Module_files/analytics.js.download"></script><script>
 (function (i, s, o, g, r, a, m) {
 i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
 (i[r].q = i[r].q || []).push(arguments)
@@ -52,24 +52,15 @@ height: auto;
 }
 </style>
 </head>
-<body class="" style="overflow-x:hidden;">
-<div class="container">
+<body class="" style="overflow-x:hidden;" cz-shortcut-listen="true">
+<div class="container-fluid">
 <div class="row content " style="display: flex;align-items: stretch;">
 <div id="leftsidemenudiv" class="" style="margin-left:15px;background-color:white;min-width: 250px;max-width:250px;transition: all 0.3s;border-right: solid 1px #f7f7f7;">
 <!-- Sidebar -->
 <div id="sidebar-wrapper" style="margin-top:10px;padding-left:10px;">
-
-<a href="./index.html" style="outline: none; text-decoration: none; ">
-    <div id="logofps">
-        <img  class="img-responsive" src="https://staging-redesign-app.k8s.fpsupport.nl/assets/images/FPS-Logo-short.png" style="height:58px;">
-        <div class="company">
-            <h2 class="name">FPS</h2>
-            <span class="slogan">Faccility Process Support</span>
-        </div>
-    </div>
+<a href="https://staging-redesign-app.k8s.fpsupport.nl/dashboard-module.html" style="outline: none; text-decoration: none; ">
+<img id="logofps" class="img-responsive" src="./Dashboard Module_files/FPS-Logo.png" style="height:58px;">
 </a>
-
-
 <div style="margin-top:40px;" class="menutext"><a href="https://staging-redesign-app.k8s.fpsupport.nl/dashboard-module.html#">Menu</a></div>
 <ul class="sidebar-nav list-unstyled" style="margin-top:30px;padding-left:20px;">
 <li class="sidebar-brand menuliparent">
@@ -78,8 +69,8 @@ height: auto;
 <a data-toggle="collapse" href="https://staging-redesign-app.k8s.fpsupport.nl/dashboard-module.html#collapse2" class="caretevent" aria-expanded="true"><i class="fa fa-dashboard fa-lg" aria-hidden="true"></i> <span class="hidetitle">Dashboard </span><span class="caret addcaret caret-up"></span></a>
 <ul class="list-group panel-collapse collapse in" id="collapse2" aria-expanded="true" style="">
 <li class="list-group-item activemenu collapse in" aria-expanded="true" style=""><a href="https://staging-redesign-app.k8s.fpsupport.nl/dashboard-module.html">Module</a></li>
-<li class="list-group-item"><a href="submodule.html">Profiel</a></li>
-<li class="list-group-item"><a href="location.html">Locatie</a></li>
+<li class="list-group-item"><a href="https://staging-redesign-app.k8s.fpsupport.nl/dashboard-profiel.html">Profiel</a></li>
+<li class="list-group-item"><a href="https://staging-redesign-app.k8s.fpsupport.nl/dashboard-locatie.html">Locatie</a></li>
 <li class="list-group-item"><a href="https://staging-redesign-app.k8s.fpsupport.nl/rapportages-zoeken.html">Rapportages</a></li>
 </ul>
 </li>
@@ -710,5 +701,6 @@ margin-right: 15px;
 <script src='_logo.js'></script>
 <script src='_menu.js'></script>
 <script src="index.js"></script>
+
 
 </div></body></html>
