update code to external resources

--- a/fps/_Dashboard Rapporttages.html
+++ b/fps/_Dashboard Rapporttages.html
@@ -3,36 +3,20 @@
 <html lang="nl">
 <head>
 <title>Rapportages</title>
-<meta name="robots" content="index,follow">
-<meta property="og:title" content="Dashboard Module">
-<meta property="og:type" content="website">
-<meta property="og:url" content="https://staging-redesign-app.k8s.fpsupport.nl/dashboard-module.html">
-<!--[if IE]> <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> <![endif]-->
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!-- header -->
+
 <link rel="shortcut icon" href="https://staging-redesign-app.k8s.fpsupport.nl/faviconAnsul.ico" type="image/x-icon">
-
-
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+<link rel="stylesheet" type="text/css" href="https://staging-redesign-app.k8s.fpsupport.nl/assets/css/bootstrap-datepicker3.css">
+<link rel="stylesheet" type="text/css" href="https://staging-redesign-app.k8s.fpsupport.nl/assets/css/customstyle.css">
+<link rel="stylesheet" type="text/css" href="https://staging-redesign-app.k8s.fpsupport.nl/assets/css/customStyleLasted.css">
+<link rel="stylesheet" type="text/css" href="https://staging-redesign-app.k8s.fpsupport.nl/assets/css/select2.css">
+<link rel="stylesheet" type="text/css" href="https://staging-redesign-app.k8s.fpsupport.nl/assets/css/style.css">
+<link rel="stylesheet" type="text/css" href="https://staging-redesign-app.k8s.fpsupport.nl/assets/lib/bootstrap-toggle/css/bootstrap-toggle.min.css">
+<link rel="stylesheet" type="text/css" href="https://staging-redesign-app.k8s.fpsupport.nl/assets/css/transition.min.css">
+<script src="https://www.google-analytics.com/analytics.js"></script>
 
-
-<link rel="stylesheet" type="text/css" href="customstyle.css">
-<link rel="stylesheet" type="text/css" href="customStyleLasted.css">
-<link rel="stylesheet" type="text/css" href="style.css">
-<link rel="stylesheet" type="text/css" href="bootstrap-toggle.min.css">
-<!--[if lt IE 9]>
-<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-<![endif]-->
-<script>
-(function (i, s, o, g, r, a, m) {
-i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-(i[r].q = i[r].q || []).push(arguments)
-}, i[r].l = 1 * new Date(); a = s.createElement(o),
-m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
-})(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-ga('create', 'UA-75794593-2', 'auto');
-ga('send', 'pageview');
-</script>
 <style>
 /* Set height of the grid so .sidenav can be 100% (adjust if needed) */
 .row.content {
@@ -544,19 +528,30 @@ id="modal_main_save_btn_submit">Akkoord</button>
 </div>
 </div>
 </div>
-<script src="jquery-1.11.2.min.js"></script>
+<!-- footer -->
+
+<script src="https://staging-redesign-app.k8s.fpsupport.nl/assets/js/jquery-1.11.2.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
-<script src="moment-with-locales.min.js"></script>
-<script src="dropzone.js"></script>
-<script src="bundle.min.js" ></script>
-<script src="init-sentry.js"></script>
-<script src="main.js"></script>
-<script src="bootstrap-toggle.min.js"></script>
+<script src="https://staging-redesign-app.k8s.fpsupport.nl/assets/js/bootstrap-datepicker.js"></script>
+<script src="https://staging-redesign-app.k8s.fpsupport.nl/assets/js/locales/bootstrap-datepicker.nl.js"></script>
+<script src="https://staging-redesign-app.k8s.fpsupport.nl/assets/js/dropzone.js"></script>
+<script src="https://browser.sentry-cdn.com/5.23.0/bundle.min.js" integrity="sha384-5yYHk2XjpqhbWfLwJrxsdolnhl+HfgEnD1UhVzAs6Kd2fx+ZoD0wBFjd65mWgZOG"></script>
+<script src="https://staging-redesign-app.k8s.fpsupport.nl/assets/js/init-sentry.js" selectorid="sentry" sentry_api_key="https://69a1bba9d92c421cb24c6c585ede4518:2303e5aceeea48519ca1433d66168c27@sentry.k8s.mytoomba.nl/33" sentry_environment="production"></script>
+<script src="https://staging-redesign-app.k8s.fpsupport.nl/assets/js/main.js"></script>
+<script src="https://staging-redesign-app.k8s.fpsupport.nl/assets/js/pages/reports-search.js"></script>
+<script src="https://staging-redesign-app.k8s.fpsupport.nl/assets/js/select2.js"></script>
+<script src="https://staging-redesign-app.k8s.fpsupport.nl/assets/js/i18n/nl.js"></script>
+<script src="https://staging-redesign-app.k8s.fpsupport.nl/assets/lib/bootstrap-toggle/js/bootstrap-toggle.min.js"></script>
+<script src="https://staging-redesign-app.k8s.fpsupport.nl/assets/js/transition.min.js"></script>
+<script src="https://staging-redesign-app.k8s.fpsupport.nl/assets/js/jquery.validate.min.js"></script>
+
+
 
 <link href="https://fonts.googleapis.com/css?family=Poppins:400,700,900" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="index.css"> 
 <script src='_logo.js'></script>
 <script src='_menu.js'></script>
 <script src="index.js"></script>
+
 </body>
 </html>
