--- a/fps/menu-test.html
+++ b/fps/menu-test.html
@@ -25,7 +25,7 @@ var menu = `
     </a>
   </li>
   <li class="menuliparent">
-    <a href="https://staging-redesign-app.k8s.fpsupport.nl/beheer.html"><i class="fa fa-cog fa-lg"
+    <a href="_Beheer.html"><i class="fa fa-cog fa-lg"
         aria-hidden="true"></i> <span class="hidetitle">Beheer </span></a>
   </li>
   <li class="menuliparent">
