Aanmaken, Gebruken, Locatin module

--- a/fps/menu-test.html
+++ b/fps/menu-test.html
@@ -41,13 +41,13 @@ var menu = `
         class="fa fa-plus fa-lg" aria-hidden="true"></i> <span class="hidetitle">Aanmaken </span><span
         class="caret addcaret"></span></a>
     <ul class="list-group panel-collapse collapse" id="collapse1">
-      <li class="list-group-item"><a href="https://staging-redesign-app.k8s.fpsupport.nl/modules.html">Job</a></li>
+      <li class="list-group-item"><a href="_Job modules.html">Job</a></li>
       <li class="list-group-item"><a
-          href="https://staging-redesign-app.k8s.fpsupport.nl/aanmaken-melding.html">Melding</a></li>
+          href="_Aanmaken Melding.html">Melding</a></li>
       <li class="list-group-item"><a
-          href="https://staging-redesign-app.k8s.fpsupport.nl/werknemers-overzicht.html">Gebruiker</a></li>
+          href="_Gebruikers overzicht.html">Gebruiker</a></li>
       <li class="list-group-item"><a
-          href="https://staging-redesign-app.k8s.fpsupport.nl/locaties-overzicht.html">Locatie</a></li>
+          href="_Locaties overzicht.html">Locatie</a></li>
     </ul>
   </li>
 </ul>
