--- a/fps/_Dashboard Module.html
+++ b/fps/_Dashboard Module.html
@@ -693,6 +693,7 @@ margin-right: 15px;
 
 <link href="https://fonts.googleapis.com/css?family=Poppins:400,700,900" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="index.css"> 
+<link rel="stylesheet" type="text/css" href="material-form.css"> 
 <script src='_logo.js'></script>
 <script src='_menu.js'></script>
 <script src="index.js"></script>
