--- a/fps/_Dashboard Rapporttages.html
+++ b/fps/_Dashboard Rapporttages.html
@@ -548,6 +548,7 @@ id="modal_main_save_btn_submit">Akkoord</button>
 
 
 <link href="https://fonts.googleapis.com/css?family=Poppins:400,700,900" rel="stylesheet">
+<link rel="stylesheet" type="text/css" href="material-form.css"> 
 <link rel="stylesheet" type="text/css" href="index.css"> 
 <script src='_logo.js'></script>
 <script src='_menu.js'></script>
