--- a/material form/index.html
+++ b/material form/index.html
@@ -32,11 +32,11 @@
         <form novalidate="">
             <div class="row">
                 <div class="col-sm">
-                    <div class="form-field">
+                    <div class="no-border bg-transparent form-field">
                         <div class="form-field__control">
                             <input id="firstname" type="text" class="form-field__input" placeholder=" ">
                             <label for="firstname" class="form-field__label">First name</label>
-                            <div class="form-field__bar"></div>
+                            <!-- <div class="form-field__bar"></div> -->
                         </div>
                     </div>
                 </div>
