--- a/fps/_Beheer.html
+++ b/fps/_Beheer.html
@@ -423,6 +423,7 @@ padding: 20px 15px !important;
 
 <link href="https://fonts.googleapis.com/css?family=Poppins:400,700,900" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="index.css"> 
+<link rel="stylesheet" type="text/css" href="material-form.css"> 
 <script src='_logo.js'></script>
 <script src='_menu.js'></script>
 <script src="index.js"></script>
