--- a/fps/_Dashboard Locatie.html
+++ b/fps/_Dashboard Locatie.html
@@ -1007,6 +1007,7 @@ padding:20px 0px;
 
 <link href="https://fonts.googleapis.com/css?family=Poppins:400,700,900" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="index.css"> 
+<link rel="stylesheet" type="text/css" href="material-form.css"> 
 <script src='_logo.js'></script>
 <script src='_menu.js'></script>
 <script src="index.js"></script>
