--- a/fps/_Formulieren.html
+++ b/fps/_Formulieren.html
@@ -1472,6 +1472,7 @@ Verwijder eerst de kopieÃ«n voordat u deze origineleformulierMODULE kunt verwi
 
 <link href="https://fonts.googleapis.com/css?family=Poppins:400,700,900" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="index.css"> 
+<link rel="stylesheet" type="text/css" href="material-form.css"> 
 <script src='_logo.js'></script>
 <script src='_menu.js'></script>
 <script src="index.js"></script>
