--- a/fps/menu-test.html
+++ b/fps/menu-test.html
@@ -90,6 +90,7 @@ var menu = `
 
 <link href="https://fonts.googleapis.com/css?family=Poppins:400,700,900" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="index.css"> 
+<link rel="stylesheet" type="text/css" href="material-form.css"> 
 <script src='_logo.js'></script>
 <script src='_menu.js'></script>
 <script src="index.js"></script>
