--- a/fps/_Dashboard Rapporttages.html
+++ b/fps/_Dashboard Rapporttages.html
@@ -126,7 +126,7 @@
                         <a href="javascript: void(0)" id="closeleftmenu">
                             <span class="badge" style="background-color:#18A5A5;border-radius: 50%;line-height: unset;"
                                 id="closemenuicon">
-                                << /span>
+                                &lt;</span>
                                     <span class="hidetitle">Menu inklappen</span>
                         </a>
                     </div>
