--- a/fps/_Dashboard Rapporttages.html
+++ b/fps/_Dashboard Rapporttages.html
@@ -376,9 +376,7 @@
                                     <div class="" id="job-only">
                                         <div class="row createFormDetail">
                                             <div class="col-md-4">
-                                                <label>JOB MODULE</label>
                                                 <!-- material -->
-                                                <div class="col-sm">
                                                     <div class="no-border bg-transparent form-field">
                                                         <div class="form-field__control">
                                                             <input id="firstname" type="text" class="form-field__input" placeholder=" ">
@@ -386,12 +384,11 @@
                                                             <!-- <div class="form-field__bar"></div> -->
                                                         </div>
                                                     </div>
-                                                </div>
 
                                             </div>
-                                            <div class="col-md-8">
-                                                <select name="module" id="module"
-                                                    class="gekoppelde-modules ui fluid search dropdown "
+                                            <div class="col-md-8 form-field">
+                                                <select name="module" id="module" 
+                                                    class="gekoppelde-modules ui fluid search dropdown  no-border bg-transparent form-field"
                                                     placeholder="Zoek op module">
                                                     <option value="all">Alle job modules</option>
                                                     <option value="82AF84E7-4140-46F1-89850A2918D3FC46">Verwijderd - 29
@@ -446,11 +443,18 @@
                                                 <label>JOB SUBMODULE</label>
                                             </div>
                                             <div class="col-md-8">
-                                                <select name="sub_module" id="sub_module"
-                                                    class="gekoppelde-modules ui fluid search dropdown "
-                                                    placeholder="Zoek op sub-module">
-                                                    <option value="all" selected>Alle job submodules</option>
-                                                </select>
+                                                <!-- material -->
+                                                <div class="no-border bg-transparent form-field">
+                                                    <div class="form-field__control">
+                                                        <select name="sub_module" id="sub_module"
+                                                            class="gekoppelde-modules ui fluid search dropdown selectarea form-field__input"
+                                                            placeholder="">
+                                                            <option value="all" selected>Alle job submodules</option>
+                                                        </select>
+                                                        <label for="sub_module" class="form-field__label">Zoek op sub-module</label>
+                                                        <!-- <div class="form-field__bar"></div> -->
+                                                    </div>
+                                                </div>
                                             </div>
                                         </div>
                                         <div class="row createFormDetail">
@@ -587,7 +591,7 @@
                                         <div class="col-md-4">
                                             <label>Locatie</label>
                                         </div>
-                                        <div class="col-md-8">
+                                        <div class="col-md-8 form-field">
                                             <select name="location" id="locatie"
                                                 class="gekoppelde-modules ui fluid search dropdown "
                                                 placeholder="Zoek op locatie" multiple="multiple">
@@ -603,21 +607,36 @@
                                             </select>
                                         </div>
                                     </div>
-                                    <div class="row createFormDetail ">
+                                    <div class="row createFormDetail">
                                         <div class="col-md-4">
-                                            <label>Periode</label>
+                                            <label>PERIODE</label>
                                         </div>
                                         <div class="col-md-4">
-                                            <span class="vanDatum">van</span>
-                                            <input type="text" class="form-control" name="vanDatum" id="date1"
-                                                data-provide="datepicker" data-date-format="dd-mm-yyyy"
-                                                data-language="nl" data-auto-close="true" autocomplete="off">
+                                            <!-- material time-picker -->
+                                            <div class="no-border bg-transparent form-field">
+                                                <div class="form-field__control">
+                                                    <input id="VAN" type="text" class="form-field__input" name="vanDatum" id="date1"
+                                                        data-provide="datepicker" data-date-format="dd-mm-yyyy"
+                                                        placeholder=" "
+                                                        data-language="nl" data-auto-close="true" autocomplete="off">
+                                                    <label for="VAN" class="form-field__label">VAN</label>
+                                                    <!-- <div class="form-field__bar"></div> -->
+                                                </div>
+                                            </div>
+                                           
                                         </div>
                                         <div class="col-md-4">
-                                            <span class="totDatum">tot</span>
-                                            <input type="text" class="form-control" name="totDatum" id="date2"
-                                                data-provide="datepicker" data-date-format="dd-mm-yyyy"
-                                                data-language="nl" data-auto-close="true" autocomplete="off">
+                                            <!-- material time-picker -->
+                                            <div class="no-border bg-transparent form-field">
+                                                <div class="form-field__control">
+                                                    <input id="TOT" type="text" class="form-field__input" name="vanDatum" id="date1"
+                                                        data-provide="datepicker" data-date-format="dd-mm-yyyy"
+                                                        placeholder=" "
+                                                        data-language="nl" data-auto-close="true" autocomplete="off">
+                                                    <label for="TOT" class="form-field__label">TOT</label>
+                                                    <!-- <div class="form-field__bar"></div> -->
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
                                     <div class="row createFormDetail">
