--- a/fps/_Notificaties.html
+++ b/fps/_Notificaties.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" type="text/css"
         href="https://staging-redesign-app.k8s.fpsupport.nl/assets/css/transition.min.css">
     <script src="https://www.google-analytics.com/analytics.js"></script>
-    < <style>
+    <style>
         /* Set height of the grid so .sidenav can be 100% (adjust if needed) */
         .row.content {
         }
