change name file

--- a/fps/menu-test.html
+++ b/fps/menu-test.html
@@ -11,11 +11,11 @@ var menu = `
         class="hidetitle">Dashboard </span><span class="caret addcaret caret-up"></span></a>
     <ul class="list-group panel-collapse collapse in" id="collapse2" aria-expanded="true" style="">
       <li class="list-group-item activemenu collapse in" aria-expanded="true" style=""><a
-          href="_Dashboard Module.html">Module</a></li>
-      <li class="list-group-item"><a href="_Dashboard Profiel.html">Profiel</a></li>
-      <li class="list-group-item"><a href="_Dashboard Locatie.html">Locatie</a></li>
+          href="_DashboardModule.html">Module</a></li>
+      <li class="list-group-item"><a href="_DashboardProfiel.html">Profiel</a></li>
+      <li class="list-group-item"><a href="_DashboardLocatie.html">Locatie</a></li>
       <li class="list-group-item"><a
-          href="_Dashboard Rapporttages.html">Rapportages</a></li>
+          href="_DashboardRapporttages.html">Rapportages</a></li>
     </ul>
   </li>
   <li class="menuliparent">
@@ -29,7 +29,7 @@ var menu = `
         aria-hidden="true"></i> <span class="hidetitle">Beheer </span></a>
   </li>
   <li class="menuliparent">
-    <a href="_Meldingen overzicht.html"><i class="fa fa-asterisk fa-lg"
+    <a href="_Meldingenoverzicht.html"><i class="fa fa-asterisk fa-lg"
         aria-hidden="true"></i> <span class="hidetitle">Melding overzicht </span></a>
   </li>
   <li class="menuliparent">
@@ -41,13 +41,13 @@ var menu = `
         class="fa fa-plus fa-lg" aria-hidden="true"></i> <span class="hidetitle">Aanmaken </span><span
         class="caret addcaret"></span></a>
     <ul class="list-group panel-collapse collapse" id="collapse1">
-      <li class="list-group-item"><a href="_Job modules.html">Job</a></li>
+      <li class="list-group-item"><a href="_Jobmodules.html">Job</a></li>
       <li class="list-group-item"><a
-          href="_Aanmaken Melding.html">Melding</a></li>
+          href="_AanmakenMelding.html">Melding</a></li>
       <li class="list-group-item"><a
-          href="_Gebruikers overzicht.html">Gebruiker</a></li>
+          href="_GebruikersOverzicht.html">Gebruiker</a></li>
       <li class="list-group-item"><a
-          href="_Locaties overzicht.html">Locatie</a></li>
+          href="_LocatiesOverzicht.html">Locatie</a></li>
     </ul>
   </li>
 </ul>
