--- a/fps/menu-test.html
+++ b/fps/menu-test.html
@@ -134,3 +134,11 @@ var menu = `
           name</label>
   </div>
 </div>
+
+
+<div class="my-controls">
+  <label class="chk-container">One
+    <input type="checkbox" checked="checked">
+    <span class="checkmark"></span>
+  </label>
+</div>
