--- a/fps/menu-test.html
+++ b/fps/menu-test.html
@@ -51,6 +51,13 @@ var menu = `
     </ul>
   </li>
 </ul>
+
+<div class="my-controls">
+  <label class="chk-container">One
+    <input type="checkbox" checked="checked">
+    <span class="checkmark"></span>
+  </label>
+</div>
 `
 
 
