--- a/fps/menu-test.html
+++ b/fps/menu-test.html
@@ -53,8 +53,8 @@ var menu = `
 </ul>
 
 <div class="my-controls">
-  <label class="chk-container">One
-    <input type="checkbox" checked="checked">
+  <label class="chk-container">
+    <input type="checkbox">
     <span class="checkmark"></span>
   </label>
 </div>
