update login errologin forgetlogin

--- a/fps/_ForgottenPassword.html
+++ b/fps/_ForgottenPassword.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<!-- saved from url=(0056)https://staging-redesign-app.k8s.fpsupport.nl/login.html -->
+<!-- saved from url=(0076)https://staging-redesign-app.k8s.fpsupport.nl/login/wachtwoord-vergeten.html -->
 <html lang="nl"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Login</title>
+<title>Forgotten password</title>
 
 <link rel="shortcut icon" href="https://staging-redesign-app.k8s.fpsupport.nl/faviconAnsul.ico" type="image/x-icon">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
@@ -41,17 +41,12 @@ height: auto;
 <div id="login" class="container">
 <div id="loginBox" class="row">
 <div class="logoSmall"></div>
-
-<form action="https://staging-redesign-app.k8s.fpsupport.nl/login/attemptLogin/" method="post" class="loginForm">
-<input type="hidden" name="postLoginUrl" value="/">
-<input name="loginId" value="" type="email" placeholder="Gebruikersnaam" required="">
-<input name="password" value="" type="password" placeholder="Wachtwoord" required="">
-<button type="submit" class="submitBtn submitBtnCustom" name="submit">Aanmelden</button>
+<div class="loginForm">
+<form action="https://staging-redesign-app.k8s.fpsupport.nl/login/sendResetInstructions/" method="post">
+<input name="loginId" value="" type="text" placeholder="E-mailadres">
+<button class="submitBtn submitBtnCustom" name="submit" type="submit" value="versturen">Versturen</button>
 </form>
-<div class="forgotPass">
-<p><a href="https://staging-redesign-app.k8s.fpsupport.nl/login/wachtwoord-vergeten.html">Wachtwoord vergeten?</a></p>
 </div>
-<div style="clear:both">&nbsp;</div>
 </div>
 </div>
 
@@ -61,7 +56,7 @@ height: auto;
 <hr>
 <ul class="logo-footer">
 <li>
-<img width="151" heidht="26" src="./Loginwrong_files/saved_resource">
+<img width="151" heidht="26" src="./Forgotten password_files/saved_resource">
 </li>
 </ul>
 </div>
@@ -124,7 +119,5 @@ height: auto;
 <script src='_logo.js'></script>
 <script src='_menu.js'></script>
 <script src="index.js"></script>
-
-
 
 </body></html>
