--- a/fps/_Login.html
+++ b/fps/_Login.html
@@ -65,8 +65,8 @@
                 </div>
                 <div class="no-border bg-transparent form-field">
                     <div class="form-field__control">
-                        <input name="password" type="password" class="form-field__input" placeholder=" " data-language="nl"
-                            data-auto-close="true" autocomplete="off" required="">
+                        <input name="password" type="password" class="form-field__input" placeholder=" "
+                            data-language="nl" data-auto-close="true" autocomplete="off" required="">
                         <label for="alert_datetime" class="form-field__label">Wachtwoord</label>
                     </div>
                 </div>
@@ -83,16 +83,7 @@
     </div>
 
 
-    <footer class="footer container-fluid">
-        <div class="container">
-            <hr>
-            <ul class="logo-footer">
-                <li>
-                    <img width="151" heidht="26" src="./Login_files/Login.html">
-                </li>
-            </ul>
-        </div>
-    </footer>
+  
     <div class="modal fade ansul-modal" tabindex="-1" role="dialog" id="modal_main">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -161,7 +152,13 @@
     <script src='_menu.js'></script>
     <script src="index.js"></script>
 
+    <script>
+        $(document).ready(function () { 
 
+
+
+        })
+    </script>
 
 </body>
 
